# HaruPro

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hpdf-lib.cpp
app/src/main/cpp/hpdf/: hpdf_page_operator.c
app/src/main/cpp/include/: hpdf.h
app/src/main/java/com/zkp/inc/hpdfpro/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
